Add boilerplate code and begin page content.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./resources/CSS/style.css">
   </head>
   <body>
-
+    <h1 id="principal">Discover hidden places in the world around you</h1>
+    <a href="#">Download Excursion (Comming soon!)</a>
   </body>
 </html>
