--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
   </head>
   <body>
     <h1 id="principal">Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Comming soon!)</a>
+    <div>
+      <a href="#">Download Excursion (Comming soon!)</a>
+    </div>
+    <video src="./resources/videos/excursion.mp4" autoplay>
+      Video presentation
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <div class="">
+      <img src="./resources/images/camp.jpg" alt="Camp image">
+    </div>
+    <br>
+    <div class="">
+      <img src="./resources/images/phone.png" alt="Cell icon">
+    </div>
+    <h2>Comming soon for Iphone and Android</h2>
+    <div class="">
+      <a href="#">Download Excursion (Comming soon!)</a>
+    </div>
   </body>
 </html>
