Add header,main,footer structure and footer content.

--- a/index.html
+++ b/index.html
@@ -6,25 +6,30 @@
     <link rel="stylesheet" href="./resources/CSS/style.css">
   </head>
   <body>
-    <h1 id="principal">Discover hidden places in the world around you</h1>
-    <div>
-      <a href="#">Download Excursion (Comming soon!)</a>
-    </div>
-    <video src="./resources/videos/excursion.mp4" autoplay>
-      Video presentation
-    </video>
-    <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <div class="">
-      <img src="./resources/images/camp.jpg" alt="Camp image">
-    </div>
-    <br>
-    <div class="">
-      <img src="./resources/images/phone.png" alt="Cell icon">
-    </div>
-    <h2>Comming soon for Iphone and Android</h2>
-    <div class="">
-      <a href="#">Download Excursion (Comming soon!)</a>
-    </div>
+    <header>
+      <h1 id="principal">Discover hidden places in the world around you</h1>
+    </header>
+    <main>
+      <div>
+        <a href="#">Download Excursion (Comming soon!)</a>
+      </div>
+      <video src="./resources/videos/excursion.mp4" autoplay>
+        Video presentation
+      </video>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <div class="">
+        <img src="./resources/images/camp.jpg" alt="Camp image">
+      </div>
+      <br>
+      <div class="">
+        <img src="./resources/images/phone.png" alt="Cell icon">
+      </div>
+      <h2>Comming soon for Iphone and Android</h2>
+      <div class="">
+        <a href="#">Download Excursion (Comming soon!)</a>
+      </div>
+    </main>
+    <footer>&copy Excursion</footer>
   </body>
 </html>
